grocery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groceryshop-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: rl-by-ip
spec:
  rules:
    - http:
        paths:
          - path: /order/v1
            pathType: Prefix
            backend:
              service:
                name: orderv1
                port:
                  number: 80
          - path: /product/v1
            pathType: Prefix
            backend:
              service:
                name: productv1
                port:
                  number: 80
            path: /userauth/v1
            pathType: Prefix
            backend:
              service:
                name: userauthv1
                port:
                  number: 80
